--- a/nugetbuild/SQLite.Core.Universal.nuspec
+++ b/nugetbuild/SQLite.Core.Universal.nuspec
@@ -14,15 +14,18 @@
         <tags>SQLite</tags>
     </metadata>
     <files>
-        <file src="build\uap\SQLite.Core.Universal.targets" target="build\win81\SQLite.Core.Universal.targets" />
+        <file src="build\universal\SQLite.Core.Universal.targets" target="build\win81\SQLite.Core.Universal.targets" />
 
-        <file src="..\SQLite.Core\SQLite.Core.Universal\bin\ARM\Release\SQLite.Core.Universal.dll" target="lib\win81-hidden\ARM\SQLite.Core.Universal.dll" />
+        <file src="..\SQLite.Core\SQLite.Core.Universal\bin\ARM\Release\SQLite.Core.dll" target="lib\win81-hidden\ARM\SQLite.Core.dll" />
         <file src="..\SQLite.Core\SQLite.Core.Universal\bin\ARM\Release\SQLite.Core.winmd" target="lib\win81-hidden\ARM\SQLite.Core.winmd" />
+        <file src="..\SQLite.Core\SQLite.Core.Universal\bin\ARM\Release\SQLite.Core.pri" target="lib\win81-hidden\ARM\SQLite.Core.pri" />
 
-        <file src="..\SQLite.Core\SQLite.Core.Universal\bin\x64\Release\SQLite.Core.Universal.dll" target="lib\win81-hidden\x64\SQLite.Core.Universal.dll" />
+        <file src="..\SQLite.Core\SQLite.Core.Universal\bin\x64\Release\SQLite.Core.dll" target="lib\win81-hidden\x64\SQLite.Core.dll" />
         <file src="..\SQLite.Core\SQLite.Core.Universal\bin\x64\Release\SQLite.Core.winmd" target="lib\win81-hidden\x64\SQLite.Core.winmd" />
+        <file src="..\SQLite.Core\SQLite.Core.Universal\bin\x64\Release\SQLite.Core.pri" target="lib\win81-hidden\x64\SQLite.Core.pri" />
 
-        <file src="..\SQLite.Core\SQLite.Core.Universal\bin\Win32\Release\SQLite.Core.Universal.dll" target="lib\win81-hidden\x86\SQLite.Core.Universal.dll" />
+        <file src="..\SQLite.Core\SQLite.Core.Universal\bin\Win32\Release\SQLite.Core.dll" target="lib\win81-hidden\x86\SQLite.Core.dll" />
         <file src="..\SQLite.Core\SQLite.Core.Universal\bin\Win32\Release\SQLite.Core.winmd" target="lib\win81-hidden\x86\SQLite.Core.winmd" />
+        <file src="..\SQLite.Core\SQLite.Core.Universal\bin\Win32\Release\SQLite.Core.pri" target="lib\win81-hidden\x86\SQLite.Core.pri" />
     </files>
 </package>
