--- a/nugetbuild/SQLite.Core.Windows.nuspec
+++ b/nugetbuild/SQLite.Core.Windows.nuspec
@@ -16,13 +16,13 @@
     <files>
         <file src="build\win81\SQLite.Core.Windows.targets" target="build\win81\SQLite.Core.Windows.targets" />
 
-        <file src="..\SQLite.Core\SQLite.Core.Windows\bin\ARM\Release\SQLite.Core.Windows.dll" target="lib\win81-hidden\ARM\SQLite.Core.Windows.dll" />
+        <file src="..\SQLite.Core\SQLite.Core.Windows\bin\ARM\Release\SQLite.Core.dll" target="lib\win81-hidden\ARM\SQLite.Core.dll" />
         <file src="..\SQLite.Core\SQLite.Core.Windows\bin\ARM\Release\SQLite.Core.winmd" target="lib\win81-hidden\ARM\SQLite.Core.winmd" />
 
-        <file src="..\SQLite.Core\SQLite.Core.Windows\bin\x64\Release\SQLite.Core.Windows.dll" target="lib\win81-hidden\x64\SQLite.Core.Windows.dll" />
+        <file src="..\SQLite.Core\SQLite.Core.Windows\bin\x64\Release\SQLite.Core.dll" target="lib\win81-hidden\x64\SQLite.Core.dll" />
         <file src="..\SQLite.Core\SQLite.Core.Windows\bin\x64\Release\SQLite.Core.winmd" target="lib\win81-hidden\x64\SQLite.Core.winmd" />
 
-        <file src="..\SQLite.Core\SQLite.Core.Windows\bin\Win32\Release\SQLite.Core.Windows.dll" target="lib\win81-hidden\x86\SQLite.Core.Windows.dll" />
+        <file src="..\SQLite.Core\SQLite.Core.Windows\bin\Win32\Release\SQLite.Core.dll" target="lib\win81-hidden\x86\SQLite.Core.dll" />
         <file src="..\SQLite.Core\SQLite.Core.Windows\bin\Win32\Release\SQLite.Core.winmd" target="lib\win81-hidden\x86\SQLite.Core.winmd" />
     </files>
 </package>
