--- a/SQLiteTests/SQLiteTests.csproj
+++ b/SQLiteTests/SQLiteTests.csproj
@@ -19,6 +19,8 @@
     <PackageCertificateKeyFile>SQLiteTests_TemporaryKey.pfx</PackageCertificateKeyFile>
     <UnitTestPlatformVersion Condition="'$(UnitTestPlatformVersion)' == ''">14.0</UnitTestPlatformVersion>
     <EnableCoreRuntime>false</EnableCoreRuntime>
+    <NuGetPackageImportStamp>
+    </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup>
     <AppXPackage>True</AppXPackage>
