--- a/SQLiteTests/packages.config
+++ b/SQLiteTests/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="SQLite.Core.Universal" version="3.8.11" targetFramework="win81" userInstalled="true" />
   <package id="System.Numerics.Vectors" version="4.0.0" targetFramework="win81" userInstalled="true" />
 </packages>
