--- a/nugetbuild/SQLite.Core.Universal.nuspec
+++ b/nugetbuild/SQLite.Core.Universal.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
     <metadata>
         <id>SQLite.Core.Universal</id>
-        <version>3.8.11.100</version>
+        <version>3.8.11.101</version>
         <authors>v.leschenko@vitaliy.org</authors>
         <owners>v.leschenko@vitaliy.org</owners>
         <licenseUrl>https://github.com/vlechenko/SQLite.Core/blob/master/README.md</licenseUrl>
@@ -14,15 +14,15 @@
         <tags>SQLite</tags>
     </metadata>
     <files>
-        <file src="build\universal\SQLite.Core.Universal.targets" target="build\win81\SQLite.Core.Universal.targets" />
+        <file src="build\universal\SQLite.Core.Universal.targets" target="build\uap10.0\SQLite.Core.Universal.targets" />
 
-        <file src="..\SQLite.Core\SQLite.Core.Universal\bin\ARM\Release\SQLite.Core.dll" target="lib\win81-hidden\ARM\SQLite.Core.dll" />
-        <file src="..\SQLite.Core\SQLite.Core.Universal\bin\ARM\Release\SQLite.Core.winmd" target="lib\win81-hidden\ARM\SQLite.Core.winmd" />
+        <file src="..\SQLite.Core\SQLite.Core.Universal\bin\ARM\Release\SQLite.Core.dll" target="lib\uap10.0-hidden\ARM\SQLite.Core.dll" />
+        <file src="..\SQLite.Core\SQLite.Core.Universal\bin\ARM\Release\SQLite.Core.winmd" target="lib\uap10.0-hidden\ARM\SQLite.Core.winmd" />
 
-        <file src="..\SQLite.Core\SQLite.Core.Universal\bin\x64\Release\SQLite.Core.dll" target="lib\win81-hidden\x64\SQLite.Core.dll" />
-        <file src="..\SQLite.Core\SQLite.Core.Universal\bin\x64\Release\SQLite.Core.winmd" target="lib\win81-hidden\x64\SQLite.Core.winmd" />
+        <file src="..\SQLite.Core\SQLite.Core.Universal\bin\x64\Release\SQLite.Core.dll" target="lib\uap10.0-hidden\x64\SQLite.Core.dll" />
+        <file src="..\SQLite.Core\SQLite.Core.Universal\bin\x64\Release\SQLite.Core.winmd" target="lib\uap10.0-hidden\x64\SQLite.Core.winmd" />
 
-        <file src="..\SQLite.Core\SQLite.Core.Universal\bin\Win32\Release\SQLite.Core.dll" target="lib\win81-hidden\x86\SQLite.Core.dll" />
-        <file src="..\SQLite.Core\SQLite.Core.Universal\bin\Win32\Release\SQLite.Core.winmd" target="lib\win81-hidden\x86\SQLite.Core.winmd" />
+        <file src="..\SQLite.Core\SQLite.Core.Universal\bin\Win32\Release\SQLite.Core.dll" target="lib\uap10.0-hidden\x86\SQLite.Core.dll" />
+        <file src="..\SQLite.Core\SQLite.Core.Universal\bin\Win32\Release\SQLite.Core.winmd" target="lib\uap10.0-hidden\x86\SQLite.Core.winmd" />
     </files>
 </package>
