--- a/nugetbuild/SQLite.Core.UAP.nuspec
+++ b/nugetbuild/SQLite.Core.UAP.nuspec
@@ -16,6 +16,9 @@
     <file src="..\SQLite.Core\SQLite.Core.Universal\bin\ARM\Release\SQLite.Core.dll" target="runtimes\win10-arm\native\SQLite.Core.dll" />
     <file src="..\SQLite.Core\SQLite.Core.Universal\bin\x64\Release\SQLite.Core.dll" target="runtimes\win10-x64\native\SQLite.Core.dll" />
     <file src="..\SQLite.Core\SQLite.Core.Universal\bin\Win32\Release\SQLite.Core.dll" target="runtimes\win10-x86\native\SQLite.Core.dll" />
+    <file src="..\SQLite.Core\SQLite.Core.Universal\bin\ARM\Release\SQLite.Core.pdb" target="runtimes\win10-arm\native\SQLite.Core.pdb" />
+    <file src="..\SQLite.Core\SQLite.Core.Universal\bin\x64\Release\SQLite.Core.pdb" target="runtimes\win10-x64\native\SQLite.Core.pdb" />
+    <file src="..\SQLite.Core\SQLite.Core.Universal\bin\Win32\Release\SQLite.Core.pdb" target="runtimes\win10-x86\native\SQLite.Core.pdb" />
 
     <file src="..\SQLite.Core\SQLite.Core.Universal\bin\Win32\Release\SQLite.Core.winmd" target="lib\uap\SQLite.Core.winmd" />
 
