--- a/nugetbuild/SQLite.Core.Windows.nuspec
+++ b/nugetbuild/SQLite.Core.Windows.nuspec
@@ -18,11 +18,14 @@
 
         <file src="..\SQLite.Core\SQLite.Core.Windows\bin\ARM\Release\SQLite.Core.dll" target="lib\win81-hidden\ARM\SQLite.Core.dll" />
         <file src="..\SQLite.Core\SQLite.Core.Windows\bin\ARM\Release\SQLite.Core.winmd" target="lib\win81-hidden\ARM\SQLite.Core.winmd" />
+        <file src="..\SQLite.Core\SQLite.Core.Windows\bin\ARM\Release\SQLite.Core.pdb" target="lib\win81-hidden\ARM\SQLite.Core.pdb" />
 
         <file src="..\SQLite.Core\SQLite.Core.Windows\bin\x64\Release\SQLite.Core.dll" target="lib\win81-hidden\x64\SQLite.Core.dll" />
         <file src="..\SQLite.Core\SQLite.Core.Windows\bin\x64\Release\SQLite.Core.winmd" target="lib\win81-hidden\x64\SQLite.Core.winmd" />
+        <file src="..\SQLite.Core\SQLite.Core.Windows\bin\x64\Release\SQLite.Core.pdb" target="lib\win81-hidden\x64\SQLite.Core.pdb" />
 
         <file src="..\SQLite.Core\SQLite.Core.Windows\bin\Win32\Release\SQLite.Core.dll" target="lib\win81-hidden\x86\SQLite.Core.dll" />
         <file src="..\SQLite.Core\SQLite.Core.Windows\bin\Win32\Release\SQLite.Core.winmd" target="lib\win81-hidden\x86\SQLite.Core.winmd" />
+        <file src="..\SQLite.Core\SQLite.Core.Windows\bin\Win32\Release\SQLite.Core.pdb" target="lib\win81-hidden\x86\SQLite.Core.pdb" />
     </files>
 </package>
